feat: add formal stock code and name search
